[project]
name = "tunnitup"
version = "0.1.0"
description = "Expose many local services through one tunnel domain"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12,<4",
    "textual>=6.6,<7",
    "typer>=0.16,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4,<10",
    "pytest-asyncio>=1.0,<2",
    "ruff>=0.12,<1",
]

[project.scripts]
tunnitup = "tunnitup.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
